Fixed the spacing for adding category input and button

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -234,6 +234,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: middle;
   padding: 4px 8px;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 #add_category button {
@@ -241,6 +242,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: middle;
   width: 140px;
   padding: 1px 0;
+  margin-bottom: 10px;
 }
 
 .category_name {
